Fix 100% bug on firefox

--- a/content/themes/TARVA/assets/scss/partials/_content.scss
+++ b/content/themes/TARVA/assets/scss/partials/_content.scss
@@ -1,6 +1,5 @@
 .content {
 	min-height: 100%;
-	min-height: 100vh;
 	position: relative;
 	background-color: $color-background-alt;
 	@include respond-max($bp1) {
